--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "styled-icons": "^10.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
