--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/Kegbi/LearnTrack#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.6",
+    "multer": "^1.4.2",
+    "pg": "^8.4.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
