--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app.js",
-    "server": "nodemon app.js",
+    "server": "nodemon server.js",
     "client": "npm run start --prefix client",
     "client:install": "npm install --prefix client",
     "client:build": "npm run build --prefix client",
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/Kegbi/LearnTrack#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "knex": "^0.21.6",
     "multer": "^1.4.2",
-    "pg": "^8.4.0"
+    "pg": "^8.4.0",
+    "sharp": "^0.26.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
