--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
-    "styled-icons": "^10.22.0"
+    "styled-icons": "^10.22.0",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
