--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,8 @@
     "express": "^4.17.1",
     "knex": "^0.21.6",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "pg": "^8.4.0",
-    "sharp": "^0.26.2",
-    "nodemon": "^2.0.4"
+    "sharp": "^0.26.3"
   }
 }
