--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.22.0",
+    "typescript": "^4.0.5",
     "uuid": "^8.3.1"
   },
   "scripts": {
@@ -40,5 +41,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.27",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
+    "@types/styled-components": "^5.1.7",
+    "eslint-config-airbnb": "^18.2.1"
   }
 }
