--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "eslint-config-airbnb": "^18.2.1"
   }
